<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardupilot_dds_tests</name>
  <version>0.0.0</version>
  <description>Tests for the ArduPilot AP_DDS library</description>
  <maintainer email="rhys.mainwaring@me.com">rhys</maintainer>
  <license>GLP-3.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>ardupilot_msgs</exec_depend>
  <exec_depend>ardupilot_sitl</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_pytest</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>micro_ros_msgs</exec_depend>
  <exec_depend>python3-geopy</exec_depend>
  <exec_depend>python3-pytest</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>socat</exec_depend>

  <test_depend>ament_black</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_uncrustify</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ardupilot_msgs</test_depend>
  <test_depend>ardupilot_sitl</test_depend>
  <test_depend>builtin_interfaces</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_pytest</test_depend>
  <test_depend>launch_ros</test_depend>
  <exec_depend>micro_ros_msgs</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>sensor_msgs</test_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
